[tool.poetry]
name = "roamwise"
version = "0.1.0"
description = "Multi-agent autonomous travel planner using CrewAI"
authors = ["Gaurav Batra <gaurav@sigmacomputing.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
httpx = ">=0.27.0"
weave = "^0.50.15"
setuptools = "^69.0.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
asyncpg = "^0.29.0"
click = "^8.2.1"
rich = ">=13.7.0,<14.0.0"
typer = "^0.16.0"
crewai = "^0.141.0"
crewai-tools = "^0.51.1"
exa-py = "^1.14.16"
browserbase = "^0.3.0"
selenium = "^4.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[tool.poetry.scripts]
roamwise = "roamwise.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88
