[project]
name = "trip-planner"
version = "0.1.0"
description = "AI Trip Planner using CrewAI and Gemini"
requires-python = ">=3.12,<3.14"
dependencies = [
    "crewai (>=0.141.0,<0.142.0)",
    "streamlit (>=1.29.0)",
    "openai (>=1.6.1)",
    "unstructured (>=0.11.0)",
    "pyowm (>=3.3.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langchain-core (>=0.3.68,<0.4.0)",
    "requests (>=2.31.0)",
    "fastapi (>=0.109.0)",
    "uvicorn (>=0.27.0)",
    "pydantic (>=2.10)",
    "python-dotenv (>=1.0.0)",
    "langchain-openai (>=0.0.5)",
    "tools (>=0.1.9)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "exa-py (>=1.14.16,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
